--- a/StytchExampleCustomUI/Podfile
+++ b/StytchExampleCustomUI/Podfile
@@ -1,4 +1,4 @@
-x Uncomment the next line to define a global platform for your project
+# Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
 
 target 'StytchExampleCustomUI' do
